reorganized container structure

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="container">
         <div class="header">
             <div class="top">
-                <div class="searchbar"></div>
-                <div class="notifications"></div>
+                <div class="searchbar"><img><input type="text"></div>
+                <div class="notifications"><img><img><p>General Kenobi</p></div>
             </div>
             <div class="bottom">
                 <div class="welcome">
@@ -99,49 +99,47 @@
                     </div>
                 </div>
             </div>
-            <div class="announcements">
-                <h2>Announcements</h2>
-                <div class="subcontainer">
-                    <div class="announcement">
-                        <h4>Announcement 1</h4>
-                        <p>Lorem ipsum announcement</p>
+            <div class="right-bar">
+                <div class="announcements">
+                    <h2>Announcements</h2>
+                    <div class="subcontainer">
+                        <div class="announcement">
+                            <h4>Announcement 1</h4>
+                            <p>Lorem ipsum announcement</p>
+                        </div>                    
+                        <div class="announcement">
+                            <h4>Announcement 2</h4>
+                            <p>Lorem ipsum announcement</p>
+                        </div>
+                        <div class="announcement">
+                            <h4>Announcement 3</h4>
+                            <p>Lorem ipsum announcement</p>
+                        </div>
                     </div>
                 </div>
-                <div class="subcontainer">
-                    <div class="announcement">
-                        <h4>Announcement 2</h4>
-                        <p>Lorem ipsum announcement</p>
-                    </div>
-                </div>
-                <div class="subcontainer">
-                    <div class="announcement">
-                        <h4>Announcement 3</h4>
-                        <p>Lorem ipsum announcement</p>
-                    </div>
-                </div>
-            </div>
-            <div class="trending">
-                <h2>Trending</h2>
-                <div class="subcontainer">
-                    <div class="trend">
-                        <img>
-                        <h4>@profile-handle</h4>
-                        <p>profile description or sth</p>
-                    </div>
-                    <div class="trend">
-                        <img>
-                        <h4>@profile-handle</h4>
-                        <p>profile description or sth</p>
-                    </div>
-                    <div class="trend">
-                        <img>
-                        <h4>@profile-handle</h4>
-                        <p>profile description or sth</p>
-                    </div>
-                    <div class="trend">
-                        <img>
-                        <h4>@profile-handle</h4>
-                        <p>profile description or sth</p>
+                <div class="trending">
+                    <h2>Trending</h2>
+                    <div class="subcontainer">
+                        <div class="trend">
+                            <img>
+                            <h4>@profile-handle</h4>
+                            <p>profile description or sth</p>
+                        </div>
+                        <div class="trend">
+                            <img>
+                            <h4>@profile-handle</h4>
+                            <p>profile description or sth</p>
+                        </div>
+                        <div class="trend">
+                            <img>
+                            <h4>@profile-handle</h4>
+                            <p>profile description or sth</p>
+                        </div>
+                        <div class="trend">
+                            <img>
+                            <h4>@profile-handle</h4>
+                            <p>profile description or sth</p>
+                        </div>
                     </div>
                 </div>
             </div>
